<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/form"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/info"
            android:layout_width="351dp"
            android:layout_height="86dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/group_733" />

        <TextView
            android:id="@+id/jumlahtes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/jenis_tes"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <TextView
            android:id="@+id/harusdiisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="248dp"
            android:text="@string/harus_diisi"
            android:textColor="@color/hijau"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/jumlahtes"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <View
            android:id="@+id/view2"
            android:layout_width="417dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tanggal_terkonfirmasi"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="13dp"
            android:text="Harus Diisi"
            android:textColor="@color/hijau"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/view2" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="354dp"
            android:layout_height="54dp"
            android:layout_marginTop="2dp"
            android:ems="15"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="354dp"
            android:layout_height="60dp"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/nama"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_NIK" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="47dp"
            android:layout_height="12dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="8dp"
            android:text="Harus Diisi"
            android:textColor="@color/hijau"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_nama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:text="@string/tanggal_lahir"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_nama" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="9dp"
            android:text="Harus Diisi"
            android:textColor="@color/hijau"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/edt_nama" />

        <EditText
            android:id="@+id/edt_tanggal_lahir"
            android:layout_width="354dp"
            android:layout_height="60dp"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:inputType="text"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.403"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/jenis_kelamin"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_tanggal_lahir" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="47dp"
            android:layout_height="12dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="240dp"
            android:text="Harus Diisi"
            android:textColor="@color/hijau"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/edt_tanggal_lahir" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hubungan_dengan_anda"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grup_kelamin" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="47dp"
            android:layout_height="12dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            android:text="Harus Diisi"
            android:textColor="@color/hijau"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/grup_kelamin" />

        <RadioGroup
            android:id="@+id/grup_hubungan"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.366"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11">

            <RadioButton
                android:id="@+id/radio_orangtua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Orang Tua" />

            <RadioButton
                android:id="@+id/radio_suamiistri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Suami / Istri" />

            <RadioButton
                android:id="@+id/radio_anak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Anak" />

            <RadioButton
                android:id="@+id/radio_kerabat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kerabat Lainnya" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:text="@string/checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.583"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grup_hubungan" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="380dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="Selanjutnya"
            android:backgroundTint="@color/hijau"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox3"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/grup_kelamin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.393"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <RadioButton
                android:id="@+id/radioButton12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Laki - Laki" />

            <RadioButton
                android:id="@+id/radioButton13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Perempuan" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jumlahtes">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rapid Antigen" />

            <RadioButton
                android:id="@+id/radioButton14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PCR" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="NIK"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <EditText
            android:id="@+id/edit_NIK"
            android:layout_width="354dp"
            android:layout_height="54dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.385"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>